<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.example.chandan.loginpage.ForgotPassword">

    <TextView
        android:text="@string/newPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView"
        android:textColor="@color/forgot"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/Edit_text_height"
        android:layout_marginTop="@dimen/top_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/textView"
        android:id="@+id/newpassword"
        android:textColorHint="@color/hintColor"
        android:textColor="@color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/Edit_text_height"
        android:layout_marginTop="@dimen/top_margin"
        android:inputType="textPassword"
        android:hint="@string/reenterNewPassword"
        android:layout_below="@+id/newpassword"
        android:id="@+id/reenterpassword"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        />

    <Button
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_below="@+id/reenterpassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"
        android:id="@+id/submit"
        android:background="#f04d4d"/>
</RelativeLayout>
